--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -1,34 +1,97 @@
-        <header class="header">
-            <h1>Proud Cobra || ITIS-3135</h1>
-            <nav>
-                <ul>
-                    <li><a href="./">Home</a></li>
-                    <li>||</li>
-                    <li><a href="introduction.html">Introduction</a></li>
-                    <li>||</li>
-                    <li><a href="contract.html">Contract</a></li>
-                    <li>||</li>
-                    <li class="projects-menu">
-                        <a href="#">Projects</a>
-                        <span class="down-arrow">&#9660;</span>
-                        <nav class="projects-nav">
-                            <ul>
-                                <li><a href="hobby/index.html" target="_blank">Hobby</a></li>
-                                <li><a href="proud-cobra.com/index.html" target="_blank">Design Firm</a></li>
-                                <li><a href="../whimsical/about.html" target="_blank">Proud Cobra Mining</a></li>
-                                <li><a href="stuff/My Terrible þ@ge01 .html" target="_blank">CRAPPY</a></li>
-                            </ul>
-                        </nav>
-                    </li>
-                    <li>||</li>
-                    <li><a href="website-evalutations.html">Evaluations</a></li>
-                    <li>||</li>
-                    <li><a href="byo_intro.html">BYO</a></li>
-                    <li>||</li>
-                    <li><a href="tables.html">Tables</a></li>
-                    <li>||</li>
-                    <li><a href="forms.html">Forms</a></li>
-                </ul>
-            </nav>
-        </header>
-        <script src="scripts/secondary_nav.js"></script>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Proud Cobra Slideshow</title>
+    <meta name="description" content="Slideshow of images for Proud Cobra, for ITIS 3135">
+    <link rel="stylesheet" href="styles/default.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
+</head>
+<body>
+    <div data-include="components/header.html"></div>
+    <main>
+        <h2>Proud Cobra Slideshow</h2>
+        <div class="slideshow-container">
+            <div class="mySlides">
+                <img src="images/slideshow/pencil.jpg" alt="P - Pencil">
+                <div class="caption">P - Pencil</div>
+                <div class="timer-bar"></div>
+            </div>
+            <div class="mySlides">
+                <img src="images/slideshow/router.jpg" alt="R - Router">
+                <div class="caption">R - Router</div>
+                <div class="timer-bar"></div>
+            </div>
+            <div class="mySlides">
+                <img src="images/slideshow/outlet.jpg" alt="O - Outlet">
+                <div class="caption">O - Outlet</div>
+                <div class="timer-bar"></div>
+            </div>
+            <div class="mySlides">
+                <img src="images/slideshow/usb.jpg" alt="U - USB">
+                <div class="caption">U - USB</div>
+                <div class="timer-bar"></div>
+            </div>
+            <div class="mySlides">
+                <img src="images/slideshow/door.jpg" alt="D - Door">
+                <div class="caption">D - Door</div>
+                <div class="timer-bar"></div>
+            </div>
+            <div class="mySlides">
+                <img src="images/slideshow/coin.jpg" alt="C - Coin">
+                <div class="caption">C - Coin</div>
+                <div class="timer-bar"></div>
+            </div>
+            <div class="mySlides">
+                <img src="images/slideshow/oil.jpg" alt="O - Oil">
+                <div class="caption">O - Oil</div>
+                <div class="timer-bar"></div>
+            </div>
+            <div class="mySlides">
+                <img src="images/slideshow/book.jpg" alt="B - Book">
+                <div class="caption">B - Book</div>
+                <div class="timer-bar"></div>
+            </div>
+            <div class="mySlides">
+                <img src="images/slideshow/rhyme.jpg" alt="R - Rhyme">
+                <div class="caption">R - Rhyme</div>
+                <div class="timer-bar"></div>
+            </div>
+            <div class="mySlides">
+                <img src="images/slideshow/antennae.jpg" alt="A - Antennae">
+                <div class="caption">A - Antennae</div>
+                <div class="timer-bar"></div>
+            </div>
+        </div>
+        <div class="controls-container">
+            <div class="controls">
+                <button id="beginning"><i class="fa fa-fast-backward"></i>Beginning</button>
+                <button id="backwards"><i class="fa fa-backward"></i>Back</button>
+                <button id="stop"><i class="fa fa-stop"></i>Stop</button>
+                <button id="start"><i class="fa fa-play"></i>Start</button>
+                <button id="forward">Forward<i class="fa fa-forward"></i></button>
+                <button id="end">End<i class="fa fa-fast-forward"></i></button>
+                <button id="fullscreen" class="full-screen"><i class="fa fa-arrows-alt"></i>Fullscreen</button>
+                <button class="thumbs-like"><i class="fa fa-thumbs-up"></i></button>
+            </div>
+        </div>
+        <ul class="slide-list">
+            <li data-slide="0">P - Pencil</li>
+            <li data-slide="1">R - Router</li>
+            <li data-slide="2">O - Outlet</li>
+            <li data-slide="3">U - USB</li>
+            <li data-slide="4">D - Door</li>
+            <li data-slide="5">C - Coin</li>
+            <li data-slide="6">O - Oil</li>
+            <li data-slide="7">B - Book</li>
+            <li data-slide="8">R - Rhyme</li>
+            <li data-slide="9">A - Antennae</li>
+        </ul>
+    </main>
+    <div data-include="components/footer.html"></div>
+    <script src="scripts/include.min.js"></script>
+    <script src="scripts/slideshow.js"></script>
+</body>
+</html>
