--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -28,6 +28,8 @@
                     <li><a href="tables.html">Tables</a></li>
                     <li>||</li>
                     <li><a href="forms.html">Forms</a></li>
+                    <li>||</li>
+                    <li><a href="slideshow.html">Slideshow</a></li>
                 </ul>
             </nav>
         </header>
