--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -1,6 +1,7 @@
 html {
     box-sizing: border-box;
 }
+
 body,
 main,
 header,
@@ -13,37 +14,44 @@ button,
 input,
 textarea,
 select {
-    box-sizing: inherit;
-    /* Apply box-sizing from html */
+    box-sizing: inherit; /* Apply box-sizing from html */
 }
+
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f9f9f9;
-    color: #333;
+    background-color: #282c34;
+    color: #d1d5db;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica,
+    Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji",
+    "Segoe UI Symbol";
     line-height: 1.6;
+    margin: 0;
 }
+
 a {
     color: #a5d6a7;
     text-decoration: none;
 }
+
 a:hover {
     text-decoration: underline;
     color: #81c784;
     transition: background-color 0.3s ease;
 }
+
 a:visited {
     color: #a5d6a7;
 }
+
 a:focus {
     outline: 2px solid #66bb6a;
 }
+
 h1,
 h2,
 h3 {
     color: #98c379;
 }
+
 .button {
     background-color: #66bb6a;
     color: #282c34;
@@ -53,14 +61,17 @@ h3 {
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
+
 .button:hover {
     background-color: #81c784;
 }
+
 nav {
     margin: 0 auto;
     padding: 20px;
     background-color: #282828;
 }
+
 nav > ul {
     display: flex;
     justify-content: space-evenly;
@@ -70,6 +81,7 @@ nav > ul {
     margin: 0;
     height: 100%;
 }
+
 nav > ul > li {
     color: #dfdfe2;
     margin: 0 0.2rem;
@@ -77,20 +89,24 @@ nav > ul > li {
     display: block;
     transition: background-color 0.3s ease;
 }
+
 nav > ul > li:hover {
     background-color: #555;
     cursor: pointer;
 }
+
 li > a {
     color: inherit;
     text-decoration: none;
 }
+
 .container {
     background-color: #373e4a;
     padding: 20px;
     border-radius: 5px;
     margin: 10px 0;
 }
+
 main {
     background-color: #373e4a;
     color: #d1d5db;
@@ -99,30 +115,36 @@ main {
     padding: 10px 20px;
     line-height: 1.6;
 }
+
 main figure {
     display: flex;
     flex-direction: column;
     align-items: center;
 }
+
 main img {
     max-width: 100%;
     height: auto;
     margin-top: 20px;
     border-radius: 10px;
 }
+
 main figcaption {
     font-style: italic;
     text-align: center;
     margin-top: 5px;
     color: #999;
 }
+
 main ul {
     padding: 20px;
     margin-top: 0;
 }
+
 main ul li strong {
     color: #98c379;
 }
+
 .footer-items,
 footer nav ul {
     display: flex;
@@ -132,20 +154,25 @@ footer nav ul {
     margin-top: 10px;
     margin-bottom: 10px;
 }
+
 .footer-items p {
     margin: 0 10px;
 }
+
 .footer-items a,
 footer nav ul li a {
     color: #66bb6a;
 }
+
 footer nav ul li a:hover {
     text-decoration: underline;
 }
+
 footer nav ul li:not(.separator):hover {
     background-color: #555;
     cursor: pointer;
 }
+
 .footer-info {
     display: flex;
     justify-content: center;
@@ -153,15 +180,18 @@ footer nav ul li:not(.separator):hover {
     flex-wrap: wrap;
     margin: 10px 0;
 }
+
 .footer-info p {
     margin: 0 10px;
 }
+
 #validation_link_html,
 #validation_link_css {
 display: block;
 text-align: center;
 margin: 10px auto;
 }
+
 .validator-container {
     display: flex;
     justify-content: center;
@@ -170,34 +200,41 @@ margin: 10px auto;
     gap: 20px;
     width: fit-content;
 }
+
 .validator-container img {
     border: 0;
     width: 88px;
     height: 31px;
 }
+
 @media (max-width: 768px) {
     main {
         padding: 5px 10px;
     }
+
     nav > ul {
         flex-direction: column;
         align-items: stretch;
     }
+
     nav > ul > li {
         text-align: center;
         margin: 5px 0;
     }
 }
+
 @media (max-width: 480px) {
     main {
         padding: 5px;
     }
 }
+
 header,
 footer {
     max-width: 1200px;
     margin: 0 auto;
 }
+
 .projects-nav {
     display: none;
     position: absolute;
@@ -214,13 +251,16 @@ footer {
     align-items: flex-start;
     min-width: fit-content;
 }
+
 .projects-menu {
     position: relative;
     display: inline-block;
 }
+
 .projects-menu .down-arrow {
     margin-left: 5px;
 }
+
 .projects-nav ul {
     display: flex;
     flex-direction: column;
@@ -228,30 +268,38 @@ footer {
     margin: 0;
     list-style: none;
 }
+
 .projects-nav ul li {
     margin: 0 10px;
 }
+
 #introResult strong {
 font-weight: bold;
 }
+
 #introResult ul {
 list-style-type: disc;
 margin-left: 20px;
 }
+
 #introResult img {
 max-width: 300px;
 }
+
 form table {
     width: 100%;
 }
+
 form td:first-child {
     width: 30%;
-    /* padding-right: 10px; */
+    /*     padding-right: 10px; */
     vertical-align: top;
 }
+
 form td:last-child {
     width: 70%;
 }
+
 /* Target input and textarea within form and table cells */
 form td > input[type="text"],
     form td > textarea,
@@ -260,47 +308,57 @@ form td > input[type="text"],
             padding: 8px;
             box-sizing: border-box;
         }
+
         form textarea {
             resize: vertical;
         }
+
         #courses {
         display: flex;
-    flex-direction: column;
-    width: 100%;
+        flex-direction: column;
+        width: 100%;
         }
+
         #courses input {
         margin-bottom: 5px;
         width: 100%;
         padding: 8px;
         box-sizing: border-box;
         }
+
         /* CSS for the tables page */
         table {
             border-collapse: collapse;
             width: 100%;
             margin-bottom: 20px;
         }
+
         th,
 td {
     border: 1px solid #ddd;
     padding: 8px;
     text-align: left;
 }
+
 th {
     background-color: #282828;
     color: #fff;
 }
+
 tr:nth-child(even) {
     background-color: #4a5568;
     /* Darker alternating rows */
 }
+
 tr:nth-child(odd) {
     background-color: #373e4a;
     /* Lighter alternating rows */
 }
+
 tr:hover {
     background-color: #616e80;
 }
+
 /* Style for the caption */
 figcaption {
     margin-top: 10px;
@@ -333,18 +391,14 @@ figcaption {
     color: #222;
     font-size: 16px;
     padding: 10px 12px;
-    display: flex;
-    justify-content: center;
     position: absolute;
-    top: 50%;
+    bottom: 0;
     left: 0;
-/*     bottom: 0; */
-/*     left: 0; */
     width: 100%;
     text-align: center;
     background-color: rgba(255, 255, 255, 0.7);
-/*     border-top-left-radius: 8px; */
-/*     border-top-right-radius: 8px; */
+    border-top-left-radius: 8px;
+    border-top-right-radius: 8px;
     box-sizing: border-box;
 }
 .slide-list {
