--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -447,7 +447,7 @@ figcaption {
 }
 
 .controls button {
-    padding: 6px;
+/*     padding: 6px; */
     border: none;
     border-radius: 5px;
     background-color: #f2f2f2;
