--- a/itis3135/styles/default.css
+++ b/itis3135/styles/default.css
@@ -533,3 +533,15 @@ figcaption {
         width: 0%;
     }
 }
+
+canvas {
+    display: block; /* Prevent extra space below the canvas */
+    margin-bottom: 20px; /* Add some margin below the canvas */
+}
+
+.canvas-main {
+    flex: 1; /* Allow main to take up remaining vertical space */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
