P5 JS: Added link

--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -30,6 +30,8 @@
                     <li><a href="forms.html">Forms</a></li>
                     <li>||</li>
                     <li><a href="slideshow.html">Slideshow</a></li>
+                    <li>||</li>
+                    <li><a href="slideshow.html">Drawing</a></li>
                 </ul>
             </nav>
         </header>
