P5 JS: Fixed link

--- a/itis3135/components/header.html
+++ b/itis3135/components/header.html
@@ -31,7 +31,7 @@
                     <li>||</li>
                     <li><a href="slideshow.html">Slideshow</a></li>
                     <li>||</li>
-                    <li><a href="slideshow.html">Drawing</a></li>
+                    <li><a href="drawing.html">Drawing</a></li>
                 </ul>
             </nav>
         </header>
